# fluid-sim

./: Cargo.toml
fl-gui/: Cargo.toml
fl-gui/src/: main.rs
fl-sim/: Cargo.toml
fl-sim/benches/: square.rs
fl-sim/src/: lib.rs  space.rs
fl-tui/: Cargo.toml
fl-tui/src/: main.rs
