[package]
name = "fl-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.0"
fl-sim = { version = "0.1.0", path = "../fl-sim" }
nalgebra = { version = "0.34.1", default-features = false }

[features]
default = ["std"]
std = ["fl-sim/std", "nalgebra/std"]
