[package]
name = "fl-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = { version = "0.2.16" }
nalgebra = { version = "0.34.1", default-features = false, features = ["macros", "libm"] }

[features]
default = []
std = ["nalgebra/std"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "square"
harness = false
